--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -58,7 +58,7 @@ img {
 }
 
 .bullet{
-  z-index: 4;
+  z-index: 3;
 }
 
 /* Fondo del juego */
@@ -100,6 +100,9 @@ img {
   z-index: 0;
 }
 
+.water{
+  z-index: 2;
+}
 
 .flipped {
   transform: scaleX(-1);
@@ -125,11 +128,11 @@ img {
 
 .cloud {
   position: absolute;
-  width: 177px;
-  height: 91px;
+  width: 300px;
+  height: 170px;
   opacity: .6;
   pointer-events: none;
-  z-index: 0;
+  z-index: 1;
   animation: floatCloud 6s ease-in-out infinite;
   filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.3));
 }
@@ -138,4 +141,42 @@ img {
   0% { transform: translateY(0px); }
   50% { transform: translateY(4px); }
   100% { transform: translateY(0px); }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.cannonball {
+  animation: spin 0.6s linear infinite;
+}
+
+.controls-intro {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 800px;
+  height: 500px;
+  object-fit: cover;
+  z-index: 1;
+  pointer-events: none;
+  opacity: 0.5;
+  animation: controls 5.5s both;
+}
+
+@keyframes controls {
+  0%{
+    opacity: .6;
+  }
+  90%{
+    opacity: .6;
+  }
+  100%{
+    opacity: 0;
+  }
 }
